destabilizes console support, another commit soon to finish it up
2007-08-02  William Lahti  <xfurious@gmail.com>
	trunk/Tools/KeyCompiler/ChangeLog:
	* removed stale debug statement

	trunk/AOT/Main/ChangeLog:
	* removed stale debug statemenT

	trunk/AOT/Core/ChangeLog:
	* X86/Assembly.cs: moved AddResources() call inside the data section
        (before DATA_END label).

	trunk/Kernel/Core/ChangeLog:
	* CommandLine.cs: added code for generic handling of kernel command
	line arguments.
	* Keymap.cs: added support for compiling in binary keymaps and picking
	them on the fly (from the kernel command line).
	* Foundation: folder for C library type code used in the kernel
	* Foundation/ByteString.cs: utilities for dealing with ASCII string
	pointers (byte*).
	* KeyMaps: deleted this in favor of new keymap archive support
	* Kernel.cs: updated to initialize CommandLine and KeyMap

--- a/Tools/KeyCompiler/ChangeLog
+++ b/Tools/KeyCompiler/ChangeLog
@@ -1,3 +1,6 @@
+2007-08-02  William Lahti  <xfurious@gmail.com>
+	* removed stale debug statement
+
 2007-07-24  William Lahti  <xfurious@gmail.com>
 	* added support for creating/unpacking keymap archives
 	* added -force option to override safety checks
