--- a/AOT/Core/ChangeLog
+++ b/AOT/Core/ChangeLog
@@ -1,3 +1,7 @@
+2007-08-02  William Lahti <xfurious@gmail.com>
+	* X86/Assembly.cs: moved AddResources() call inside the data section
+	(before DATA_END label).
+
 2007-07-28  William Lahti <xfurious@gmail.com>
 	* X86/Assembly.cs: added support for encoding assembly resources into
 	the output binary
