--- a/Kernel/Core/ChangeLog
+++ b/Kernel/Core/ChangeLog
@@ -1,3 +1,14 @@
+2007-08-02  William Lahti  <xfurious@gmail.com>
+	* CommandLine.cs: added code for generic handling of kernel command
+	line arguments.
+	* Keymap.cs: added support for compiling in binary keymaps and picking 
+	them on the fly (from the kernel command line).
+	* Foundation: folder for C library type code used in the kernel
+	* Foundation/ByteString.cs: utilities for dealing with ASCII string
+	pointers (byte*).
+	* KeyMaps: deleted this in favor of new keymap archive support
+	* Kernel.cs: updated to initialize CommandLine and KeyMap 
+
 2007-07-20  William Lahti  <xfurious@gmail.com>
 	* banished X86-specific code to the ADC layer mechanism
 	* merged in logicalerror's console code and TextMode class
