The kernel is broken-- the default ISR handler gets called and it halts. No time to delve too deep right now but these changes are long in the process. Maybe Chriss or another dev who understands such things can improve the matter.

--- a/Kernel/Core/ChangeLog
+++ b/Kernel/Core/ChangeLog
@@ -1,3 +1,9 @@
+2007-08-12  William Lahti  <xfurious@gmail.com>
+	* ADC/X86/TextMode.cs: moved WriteString to ADC/TextMode.cs
+	* ADC/TextMode.cs: removed WriteString ADC stub
+	* Pager.cs: moved to PageAllocator.cs
+	* PageAllocator.cs: changed comment style to fit in
+
 2007-08-02  William Lahti  <xfurious@gmail.com>
 	* CommandLine.cs: added code for generic handling of kernel command
 	line arguments.
