xfury's mega patch, featuring a new software clock as well as a new testing framework for the kernel. Do nant dist-test and check the 'testcase' command for more details!

--- a/Kernel/Core/ChangeLog
+++ b/Kernel/Core/ChangeLog
@@ -1,3 +1,38 @@
+2008-01-15  William Lahti  <xfurious@gmail.com>
+	* Korlib/System/Char.cs: added
+	* Korlib/System/String.cs: testcases use Testcase.Test
+	* ADC/X86/Architecture.cs: removed RTC.Setup call
+	* ADC/X86/RTC.cs: changed Setup() to Read()
+	* ADC/X86/TextMode.cs: GetCursor/GetScreenSize use 'out' params
+	* ADC/RTC.cs: added, so RTC can be called from non-ADC
+	* ADC/FloppyDiskController.cs: removed System.Collections.Generic
+	  reference.
+	* ADC/TextMode.cs
+	  * cleaned up 'unsafe' keywords
+	  * added CursorTop and CursorLeft
+	* ASCII.cs: claimed authorship
+	* Clock.cs: a software clock that tracks seconds and nanoseconds.
+	* Foundation/CalendarType.cs: enumeration defines various calendars
+	* Foundation/CalendarType.cs: enumeration defines various calendars
+	* Foundation/Timestamp.cs: 64-bit CLI-compliant timestamp
+	* Foundation/Time.cs: generic type for holding a date/time.
+	* Foundation/Timezone.cs: handles timezone shifts
+	* Foundation/Testcase.cs: a new system for kernel testing
+	* Foundation/StringBuilder.cs: testcases use Testcase.Test
+	* Foundation/GregorianCalendar.cs: the first of many
+	* Foundation/PString8.cs: testcases use Testcase.Test
+	* Foundation/Convert.cs: added ToInt32()
+	* Foundation/CString8.cs: testcases use Testcase.Test
+	* Foundation/ByteString.cs: testcases use Testcase.Test
+	* Console.cs: make use of new GetCursor syntax
+	* Shell/Commands/BuiltIn/Timezone.cs: view/set timezone (buggy)
+	* Shell/Commands/BuiltIn/Testcase.cs: view testcases that have run
+	* Shell/Commands/BuiltIn/Time.cs: show system/hardware time
+	* Shell/Commands/BuiltIn/Snake.cs: uses new GetCursor() syntax
+	* EntryModule.cs: added Clock.Setup() call
+	* Diagnostics.cs: made assertion print message before panicking, so
+	  that if the panic fails, we can still see the message.
+
 2007-08-12  William Lahti  <xfurious@gmail.com>
 	* ADC/X86/TextMode.cs: moved WriteString to ADC/TextMode.cs
 	* ADC/TextMode.cs: removed WriteString ADC stub
